# mixtral_ollama

./: .gitignore  1_smoketest.py  2_index_data.py  3_verify_index.py  README.md  app.py  pyproject.toml
